@@ -2,6 +2,7 @@
 Version: 5.2.9
 Date: ????
   Changes:
+    - Added a pin button to the gui, to keep it open when pressing E/Escape. By default the gui will stay open.
     - Added a tooltip to the top button, showing the control to toggle the status display
     - Researching the personal logistics opens the status display
   Bugfixes:
